Adicionando robots.txt e Meta Description.

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="pt-BR">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/Logo.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="A HastyDEV é uma plataforma projetada com o propósito de simplificar e facilitar a colaboração entre desenvolvedores, Microempreendedores Individuais (MEIs) e Organizações Não Governamentais (ONGs) no mercado de desenvolvimento de software. Esta plataforma oferece oportunidades únicas para todos os envolvidos, tornando-se um centro de convergência para criar soluções tecnológicas, promover o crescimento de portfólios e incentivar a participação através de um sistema gamificado."
+    />
     <title>HastyDEV</title>
   </head>
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
+    <noscript>Você Precisa de Javascript para Rodar esse Site.</noscript>
   </body>
 </html>
