--- a/frontend/index.html
+++ b/frontend/index.html
@@ -9,6 +9,31 @@
       content="A HastyDEV é uma plataforma projetada com o propósito de simplificar e facilitar a colaboração entre desenvolvedores, Microempreendedores Individuais (MEIs) e Organizações Não Governamentais (ONGs) no mercado de desenvolvimento de software. Esta plataforma oferece oportunidades únicas para todos os envolvidos, tornando-se um centro de convergência para criar soluções tecnológicas, promover o crescimento de portfólios e incentivar a participação através de um sistema gamificado."
     />
     <title>HastyDEV</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+
+    <meta property="og:url" content="https://hasty-dev.vercel.app/" />
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="HastyDEV" />
+    <meta
+      property="og:description"
+      content="A HastyDEV é uma plataforma projetada com o propósito de simplificar e facilitar a colaboração entre desenvolvedores, Microempreendedores Individuais (MEIs) e Organizações Não Governamentais (ONGs) no mercado de desenvolvimento de software. Esta plataforma oferece oportunidades únicas para todos os envolvidos, tornando-se um centro de convergência para criar soluções tecnológicas, promover o crescimento de portfólios e incentivar a participação através de um sistema gamificado."
+    />
+    <meta property="og:image" content="/Logo.svg" />
+
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta property="twitter:domain" content="hasty-dev.vercel.app" />
+    <meta property="twitter:url" content="https://hasty-dev.vercel.app/" />
+    <meta name="twitter:title" content="HastyDEV" />
+    <meta
+      name="twitter:description"
+      content="A HastyDEV é uma plataforma projetada com o propósito de simplificar e facilitar a colaboração entre desenvolvedores, Microempreendedores Individuais (MEIs) e Organizações Não Governamentais (ONGs) no mercado de desenvolvimento de software. Esta plataforma oferece oportunidades únicas para todos os envolvidos, tornando-se um centro de convergência para criar soluções tecnológicas, promover o crescimento de portfólios e incentivar a participação através de um sistema gamificado."
+    />
+    <meta name="twitter:image" content="/Logo.svg" />
   </head>
   <body>
     <div id="root"></div>
